[package]
authors = ["andylokandy <andylokandy@hotmail.com>"]
edition = "2018"
name = "elba-backend"
version = "0.1.0"

[dependencies]
actix = "0.7"
base64 = "0.9.2"
bytes = "0.4.9"
chrono = "0.4.6"
diesel_full_text_search = "1.0.1"
dotenv = "0.13.0"
env_logger = "0.5"
failure = "0.1.2"
flate2 = "1.0"
failure_derive = "0.1"
futures = "0.1"
git2 = "0.7.5"
lazy_static = "1"
log = "0.4"
num_cpus = "1.0"
semver = "0.9.0"
serde = "1.0.78"
serde_derive = "1.0"
serde_json = "1.0"
tar = "0.4"
tokio = "0.1"
url = "1.7"

[dependencies.tokio-async-await]
features = ["async-await-preview"]
version = "0.1.6"

[dependencies.actix-web]
features = ["tls"]
version = "0.7"

[dependencies.diesel]
features = [
    "postgres",
    "serde_json",
    "r2d2",
    "chrono",
]
version = "1.4"

[dependencies.elba]
git = "https://github.com/elba/elba.git"
