[package]
authors = ["andylokandy <andylokandy@hotmail.com>"]
edition = "2018"
name = "elba-registry"
version = "0.1.0"

[dependencies]
actix = "0.7"
bytes = "0.4.9"
chrono = "0.4.6"
dotenv = "0.13.0"
env_logger = "0.5"
failure = "0.1.2"
failure_derive = "0.1"
flate2 = "1.0"
futures = "0.1"
git2 = "0.7.5"
itertools = "0.8.0"
lazy_static = "1"
log = "0.4"
num_cpus = "1.0"
reqwest = "0.9.13"
rusoto_core = "0.37"
rusoto_credential = "0.16.0"
rusoto_s3 = "0.37"
semver = "0.9.0"
semver_constraints = "0.1.0"
serde = "1.0.78"
serde_derive = "1.0"
serde_json = "1.0"
simsearch = "0.1"
tar = "0.4"
tempdir = "0.3.7"
tokio = "1.8"
url = "1.7"

[dependencies.actix-web]
features = ["tls"]
version = "0.7"

[dependencies.diesel]
features = [
    "postgres",
    "serde_json",
    "r2d2",
    "chrono",
]
version = "1.4"

[dependencies.elba]
git = "https://github.com/elba/elba.git"

[dependencies.tokio-async-await]
features = ["async-await-preview"]
version = "0.1.6"
